Fix inventory not visible by default

--- a/ox_inventory/html/style.css
+++ b/ox_inventory/html/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background: rgba(0, 0, 0, 0.75);
+  background: transparent;
   color: #fff;
 }
 
@@ -18,6 +18,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  background: rgba(0, 0, 0, 0.75);
   display: flex;
   flex-direction: column;
   align-items: center;
